[gd_scene load_steps=22 format=2]

[ext_resource path="res://Assets/2D/SPRITE_staff.png" type="Texture" id=1]
[ext_resource path="res://scenes/GameCode/GravityBullet.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/GameCode/Player.gd" type="Script" id=3]
[ext_resource path="res://Assets/Sounds/PlayerSounds/PlayerShot.wav" type="AudioStream" id=4]
[ext_resource path="res://scenes/GameCode/MouseAim.gd" type="Script" id=5]
[ext_resource path="res://Assets/2D/PlayerSprites/SpriteSheets/SPRITEFRAMES_PlayerWithoutStaff_01.tres" type="SpriteFrames" id=6]
[ext_resource path="res://Assets/2D/PlayerSprites/SpriteSheets/SPRITEFRAMES_PlayerWithStaff_01.tres" type="SpriteFrames" id=7]
[ext_resource path="res://Assets/Sounds/PlayerSounds/PlayerDies.wav" type="AudioStream" id=8]
[ext_resource path="res://Assets/Sounds/PlayerSounds/PlayerHurt.wav" type="AudioStream" id=9]
[ext_resource path="res://Assets/Sounds/PlayerSounds/GravityChange.wav" type="AudioStream" id=10]
[ext_resource path="res://scenes/GameCode/PlayerJump.gd" type="Script" id=11]
[ext_resource path="res://Assets/Sounds/PlayerSounds/Sound_Jump_001.wav" type="AudioStream" id=12]
[ext_resource path="res://Assets/VFX/VFX_asset/VFX_GettingGravity.tscn" type="PackedScene" id=13]
[ext_resource path="res://Assets/VFX/VFX_asset/VFX_gravityGunMuzzleFlash.tscn" type="PackedScene" id=14]
[ext_resource path="res://Assets/VFX/VFX_asset/VFX_PlayerWalking_01.tscn" type="PackedScene" id=15]
[ext_resource path="res://Assets/VFX/VFX_asset/VFX_ControllerCursor.tscn" type="PackedScene" id=16]
[ext_resource path="res://Assets/VFX/VFX_asset/VFX_GravityPowerItemCutsceneExplosion.tscn" type="PackedScene" id=17]
[ext_resource path="res://Assets/Sounds/PlayerSounds/Sound_Walk_002.wav" type="AudioStream" id=18]

[sub_resource type="CapsuleShape" id=18]
height = 1.7

[sub_resource type="Animation" id=17]
resource_name = "dropStaff"
length = 0.65
tracks/0/type = "value"
tracks/0/path = NodePath("FlipContainer/WeaponSprite3D:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0.404681, 0, 0.0567048 ), Vector3( 0.610766, -0.247302, 0.0567048 ), Vector3( 1.14659, -1.00295, 0.0567049 ), Vector3( 1.42137, -1.79981, 0.056705 ), Vector3( 1.59997, -1.33268, 0.056705 ), Vector3( 1.86102, -1.70364, 0.056705 ), Vector3( 1.92971, -1.8685, 0.056705 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FlipContainer/WeaponSprite3D:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 3.67143e-06, -8.1767e-07, -25.111 ), Vector3( 5.50403e-06, -1.97664e-06, -39.509 ), Vector3( 8.02654e-06, -5.42315e-06, -68.09 ), Vector3( 8.6513e-06, -8.60341e-06, -89.682 ), Vector3( 8.33896e-06, -6.34729e-06, -74.554 ), Vector3( 8.63949e-06, -8.19699e-06, -86.989 ), Vector3( 0, 0, -90 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("FlipContainer/WeaponSprite3D:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=6]
resource_name = "playerHurt"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("FlipContainer:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="Player" type="KinematicBody"]
collision_layer = 524289
collision_mask = 524289
input_ray_pickable = false
axis_lock_motion_z = true
move_lock_z = true
script = ExtResource( 3 )
playerMaxSpeed = 20.0
playerGravity = -0.7
jumpForceReset = 6.5
damageBoostForceX = 10.0
damageBoostForceY = 10.0

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, -0.27, 0 )
shape = SubResource( 18 )

[node name="FlipContainer" type="Spatial" parent="."]
transform = Transform( -1, 0, -1.50996e-07, 0, 1, 0, 1.50996e-07, 0, -1, 0, 0, 0 )

[node name="WeaponSprite3D" type="Sprite3D" parent="FlipContainer"]
transform = Transform( 0.316921, 0.148531, -1.4271e-08, -0.148531, 0.316921, -6.40785e-08, -4.99485e-09, 2.24275e-08, 1, 0.404681, 0, 0.0567048 )
texture = ExtResource( 1 )

[node name="PlayerSprite3D" type="AnimatedSprite3D" parent="FlipContainer"]
transform = Transform( 0.371, 0, 3.06567e-07, 0, 0.371, 0, -1.13736e-07, 0, 1, -0.6605, 0.00614515, -9.97329e-08 )
frames = ExtResource( 6 )
animation = "walking"
frame = 5
playing = true

[node name="PlayerStaffSprite3D" type="AnimatedSprite3D" parent="FlipContainer"]
transform = Transform( 0.371, 0, 3.06567e-07, 0, 0.371, 0, -1.13736e-07, 0, 1, -0.6605, 0.00614515, -9.97329e-08 )
visible = false
frames = ExtResource( 7 )
animation = "jumping"
frame = 3
playing = true

[node name="MouseAim" type="Spatial" parent="FlipContainer"]
transform = Transform( -0.267508, 0, 1.50996e-07, 0, 0.267508, 0, -4.03926e-08, 0, -1, 1.59791, 1.71137, 2.41278e-07 )
script = ExtResource( 5 )
gravityBullet = ExtResource( 2 )

[node name="PlayerShot" type="AudioStreamPlayer" parent="FlipContainer/MouseAim"]
stream = ExtResource( 4 )
volume_db = -6.0
bus = "Sound"

[node name="StaffCooldownTimer" type="Timer" parent="FlipContainer/MouseAim"]
wait_time = 0.5
one_shot = true

[node name="VFX_gravityGunMuzzleFlash" parent="FlipContainer/MouseAim" instance=ExtResource( 14 )]
transform = Transform( 0.999999, 0, 0, 0, 0.999999, 0, -3.38813e-21, 0, 1, -0.510364, -1.14225, -1.99448e-14 )

[node name="VFX_ControllerCursor" parent="FlipContainer/MouseAim" instance=ExtResource( 16 )]
transform = Transform( 0.999999, 0, 0, 0, 0.999999, 0, -3.38813e-21, 0, 1, 0, 0, 0 )
visible = false

[node name="CoyoteTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.2
one_shot = true

[node name="BufferTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.125
one_shot = true

[node name="DamageBoostTimer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="InvincibleTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 3.0
one_shot = true
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/dropStaff = SubResource( 17 )
anims/playerHurt = SubResource( 6 )

[node name="AudioContainer" type="Node" parent="."]

[node name="GravityChange" type="AudioStreamPlayer" parent="AudioContainer"]
stream = ExtResource( 10 )
volume_db = -6.0
bus = "Sound"

[node name="Walking" type="AudioStreamPlayer" parent="AudioContainer"]
stream = ExtResource( 18 )
volume_db = -25.0
bus = "Sound"
script = ExtResource( 11 )

[node name="PlayerDies" type="AudioStreamPlayer" parent="AudioContainer"]
stream = ExtResource( 8 )
volume_db = -10.0
bus = "Sound"

[node name="PlayerIsHurt" type="AudioStreamPlayer" parent="AudioContainer"]
stream = ExtResource( 9 )
volume_db = -5.0
bus = "Sound"

[node name="PlayerJump" type="AudioStreamPlayer" parent="AudioContainer"]
stream = ExtResource( 12 )
volume_db = -20.0
pitch_scale = 0.77
bus = "Sound"
script = ExtResource( 11 )

[node name="Listener" type="Listener" parent="."]
transform = Transform( -1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )

[node name="RayCastUp" type="RayCast" parent="."]
visible = false
enabled = true
cast_to = Vector3( 0, 1, 0 )
debug_shape_custom_color = Color( 0.756863, 0.0901961, 0.0901961, 1 )
debug_shape_thickness = 5

[node name="RayCastDown" type="RayCast" parent="."]
visible = false
enabled = true
debug_shape_custom_color = Color( 0.141176, 0.0901961, 0.756863, 1 )
debug_shape_thickness = 5

[node name="RayCastRight" type="RayCast" parent="."]
visible = false
enabled = true
cast_to = Vector3( -15, 0, 0 )
collision_mask = 512
collide_with_areas = true
debug_shape_custom_color = Color( 0.0745098, 0.309804, 0.807843, 1 )
debug_shape_thickness = 5

[node name="RayCastLeft" type="RayCast" parent="."]
visible = false
enabled = true
cast_to = Vector3( 15, 0, 0 )
collision_mask = 512
collide_with_areas = true
debug_shape_custom_color = Color( 0.0745098, 0.309804, 0.807843, 1 )
debug_shape_thickness = 5

[node name="VFXContainer" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.19209e-07, 1.19209e-07, 2.71051e-20 )

[node name="VFX_GettingGravity" parent="VFXContainer" instance=ExtResource( 13 )]
transform = Transform( -1, 8.74228e-08, 0, -8.74228e-08, -1, 0, 0, 0, 1, 0, 0, 0 )

[node name="VFX_PlayerWalking" parent="VFXContainer" instance=ExtResource( 15 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.6, 0 )

[node name="VFX_GravityPowerItemCutsceneExplosion" parent="VFXContainer" instance=ExtResource( 17 )]

[connection signal="timeout" from="DamageBoostTimer" to="." method="_on_DamageBoostTimer_timeout"]
